--- a/Webmail/nbproject/project.properties
+++ b/Webmail/nbproject/project.properties
@@ -1,8 +1,16 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=javascripts
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -47,7 +55,9 @@ javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
@@ -68,7 +78,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -80,10 +89,10 @@ run.test.classpath=\
 runmain.jvmargs=
 source.encoding=UTF-8
 source.root=src
-src.dir=${source.root}/java
+src.src.dir=src
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
 war.name=Webmail.war
-web.docbase.dir=web
-webinf.dir=web/WEB-INF
+web.docbase.dir=../web
+webinf.dir=../web/WEB-INF
