--- a/Webmail/nbproject/project.properties
+++ b/Webmail/nbproject/project.properties
@@ -39,6 +39,7 @@ endorsed.classpath=\
 excludes=
 file.reference.commons-email-1.3.2.jar=lib\\commons-email-1.3.2.jar
 file.reference.javax.mail.jar=lib\\javax.mail.jar
+file.reference.jericho-html-3.3.jar=lib\\jericho-html-3.3.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -54,7 +55,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-email-1.3.2.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jericho-html-3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
