--- a/JOSU/ProjACINETFINALDOSEMEEESTRE/Vagalmail/nbproject/private/private.properties
+++ b/JOSU/ProjACINETFINALDOSEMEEESTRE/Vagalmail/nbproject/private/private.properties
@@ -4,4 +4,4 @@ j2ee.server.instance=tomcat70:home=C:\\apache-tomcat-7.0.52-windows-x64\\apache-
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\u12177\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\Jos\u00e9 Carlos\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
