--- a/Webmail/nbproject/project.properties
+++ b/Webmail/nbproject/project.properties
@@ -40,6 +40,7 @@ excludes=
 file.reference.commons-email-1.3.2.jar=lib\\commons-email-1.3.2.jar
 file.reference.javax.mail.jar=lib\\javax.mail.jar
 file.reference.jericho-html-3.3.jar=lib\\jericho-html-3.3.jar
+file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -56,7 +57,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.commons-email-1.3.2.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.jericho-html-3.3.jar}
+    ${file.reference.jericho-html-3.3.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -80,6 +82,7 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.preview=true
 javadoc.private=false
+javadoc.reference.jericho-html-3.3.jar=http://jericho.htmlparser.net/docs/javadoc/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
